# bunshi

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  setup.cfg
bunshi/: __init__.py  breakdown.csv  bunshi.py  cli.py  draw.py  inout.py
bunshi/assets/: breakdown.tsv
