[metadata]
name = bunshi
version = attr: bunshi.__VERSION__
description = Kanji Breakdown CLI
long_description_content_type = text/markdown
long_description = file: README.md
author = Johannes H. Gjeraker
author_email = jhgjeraker@protonmail.com
keywords =
    kanji
    component
    radical
    breakdown
    cli
license_file = LICENSE
classifiers = 
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
bunshi = assets/breakdown.tsv

[options.entry_points]
console_scripts =
    bunshi = bunshi.cli:entry_point

[options.extras_require]
dev =
    pandas >= 1.4.3
    pytest >= 7.1.0
    pytest-mock >= 3.7.0
    mypy >= 0.9
    flake8 >= 4.0.0
    build >= 0.7.0
    setuptools >= 62.1.0
    wheel >= 0.37.0
